--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Solitreo';
-    src: url(/spyder_urekon/fonts/Solitreo-Regular.ttf);
+    src: url(fonts/Solitreo-Regular.ttf);
 }
 body{
     overflow-y:scroll;
@@ -12,7 +12,7 @@ body{
     color: white;
 }
 .hero{
-    background-image: url(/spyder_urekon/images/image\ 2.png);
+    background-image: url(images/image\ 2.png);
     background-size: cover;
     background-color: #0d100e;
     color: white;
